# mcu48

./: .gitignore  Makefile  Makefile.am  configure.ac  cpu.h  instruction.c  instruction.h  mcu48.c
.github/workflows/: build-c.yml
roms/: .gitignore  Makefile  hp48_rom.h  sxrom-a.rom
src/: Makefile.am  actions.c  debugger.c  emulate.c  global.h  hp48.h  hp48_emu.h  init.c  lcd.c  memory.c  options.h  resources.c  resources.h  serial.c  x48_x11.c  x48_x11.h
